finalizando secition hero

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "AtypText";
-  src: url(../fonts/AtypText-Regular.woff2) format('woff2'),
+  src: url(../fonts/AtypText-Semibold.woff2) format('woff2'),
   url(../fonts/AtypText-Semibold.woff) format("wof");
   font-weight: 600;
   font-style: normal;
