--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,3 +1,118 @@
-h1 {
-  color: var(--red);
+.s-hero {
+  width: 100%;
+  background: #f2f3f9;
+  padding: 19.3rem 18rem;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .left {
+    position: relative;
+    width: 100%;
+    max-width: 55.5rem;
+    margin-top: 1.6rem;
+    .star {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+    h1 {
+      position: relative;
+      font-size: 6.4rem;
+      line-height: 7.7rem;
+      font-weight: 600;
+      color: var(--black);
+      margin-bottom: 2.6rem;
+      z-index: 1;
+
+      &::after {
+        content: "";
+        width: 445px;
+        height: 8px;
+        background-color: var(--yellow);
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        z-index: -1;
+      }
+    }
+
+    p {
+      font-size: 1.8rem;
+      line-height: 160%;
+      font-family: "Inter";
+      color: var(--gray);
+      margin-bottom: 4rem;
+    }
+
+    form {
+      width: 100%;
+      max-width: 52rem;
+      height: 6.9rem;
+      background: var(--white);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-radius: 12.2rem;
+      box-shadow: 0px 15px 30px -10px rgba(204, 206, 219, 0.4);
+      margin-bottom: 5.6rem;
+      padding: 0 1.5rem 0 3.4rem;
+
+      input {
+        flex: 1;
+        margin-right: 2rem;
+        border: none;
+        color: var(--black);
+        font-family: "Inter";
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 150%;
+        &::placeholder {
+          color: var(--gray2);
+        }
+      }
+
+      button {
+        padding: 1.5rem 2.8rem;
+        border: none;
+        background: var(--black);
+        border-radius: 9.76rem;
+        cursor: pointer;
+        font-size: 1.4rem;
+        color: #fdfdfd;
+        font-weight: 600;
+      }
+    }
+
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 3rem;
+      margin-bottom: 6rem;
+    }
+
+    .review {
+      display: flex;
+      align-items: center;
+     
+      gap: 1.6rem;
+      span {
+        display: flex;
+        align-items: center;
+        font-family: "Inter";
+        font-size: 1.2rem;
+        color: #666671;
+        img {
+          margin-right: 6px;
+        }
+      }
+    }
+  }
+
+  .right {
+    position: relative;
+    right: -11.2rem;
+  }
+
 }
