--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -116,3 +116,47 @@
   }
 
 }
+
+.s-card {
+  padding-bottom: 11.6rem;
+  margin-top: -11.6rem;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .card {
+    width: 100%;
+    max-height: 38.4rem;
+    height: 21.6rem;
+    background: #fdfdfd;
+    box-shadow: 0px 2.4rem 4.4rem -1.1rem rgba(181, 183, 192, 0.3);
+    border-radius: 1.2rem;
+    padding: 4.8rem 5.4rem 4rem 4rem;
+    .icon {
+      margin-bottom: 2.9rem;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .text {
+      h3 {
+        font-weight: 600;
+        font-size: 2.2rem;
+        line-height: 150%;
+        color: var(--black);
+        margin-bottom: 0.3rem;
+      }
+      p {
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 160%;
+        color: var(--gray);
+      }
+    }
+  }
+}
